-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
None
-
Fully Compatible
-
ALL
-
Execution Team 2021-04-05
-
156
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Currently when a timeseries insert fails because we attempt to update a bucket document and it no longer exists, we retry the insert and maintain an invariant that the second attempt succeeds. That invariant doesn't hold, and if we get quite unlucky with frequent bucket deletion (either very short TTL or manual deletion), it could require multiple retries.