SERVER-55409 Allow for repeatedly retrying timeseries insert